# garden

./: Cargo.toml  README.md  flake.nix
garden-client/: Cargo.toml  build.rs
garden-client/assets/: resources.xml
garden-client/assets/images/: icon.xcf
garden-client/src/: accounts.rs  config.rs  handler.rs  main.rs  node.rs
garden-client/src/ui/: create_post_dialog.rs  login.rs  login_account_dialog.rs  login_window.rs  main.rs  main_window.rs  mod.rs  new_account_dialog.rs
garden-protocol/: Cargo.toml
garden-protocol/src/: comment.rs  handler.rs  lib.rs  post.rs  reaction.rs
garden-protocol/src/events/: create_community.rs  create_community_post.rs  mod.rs
garden-protocol/src/index/: comment.rs  mod.rs  post.rs
garden-protocol/src/types/: blockchain_address.rs  mod.rs  name.rs  printable_text.rs
garden-server/: Cargo.toml  docs.md
garden-server/src/: database.rs  main.rs
garden-server/src/database/: community.rs  community_post.rs  mod.rs
garden-server/src/handlers/: mod.rs
