[package]
name = "garden-protocol"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[dependencies]
libflowerpot = { git = "https://github.com/krypt0nn/flowerpot" }
thiserror = "2.0"
regex = "1.11"
lazy_static = "1.5.0"
