[package]
name = "garden-server"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[dependencies]
libflowerpot = { git = "https://github.com/krypt0nn/flowerpot" }
garden-protocol = { path = "../garden-protocol" }
thiserror = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
spin = "0.10"
