[package]
name = "garden-server"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[dependencies]
libflowerpot = { git = "https://github.com/krypt0nn/flowerpot" }
garden-protocol = { path = "../garden-protocol" }
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.8", features = ["http2"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
spin = "0.10"
time = "0.3"
rand_chacha = "0.3"
